--- a/Template_4.html
+++ b/Template_4.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Template 4</title>
-    <link rel="stylesheet" href="css/uikit.min.css" />
+    <link rel="stylesheet" href="css/uikit.min.css" />    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/uikit.js"></script>
 </head>
 
-<body>
+<body>    
     <div class="uk-container uk-container-center uk-margin-top">
         <h3>Dropdown
             <code>uk-dropdown | data-uk-dropdown | data-uk-dropdown="{mode:'click'}"</code>
@@ -284,10 +284,12 @@
         </div>
         <hr>
         <div class="uk-container uk-container-center uk-margin-top">
-            <h3>Smooth scroll - <code>data-uk-smooth-scroll</code>
+            <h3>Smooth scroll -
+                <code>data-uk-smooth-scroll</code>
             </h3>
             <ul>
-                <li>data-uk-smooth-scroll - Enhance your site with a nice effect that slows down the scrolling when jumping to another part of your page.</li>
+                <li>data-uk-smooth-scroll - Enhance your site with a nice effect that slows down the scrolling when jumping to
+                    another part of your page.</li>
             </ul>
             <a href="#top" class="uk-button" data-uk-smooth-scroll="">Go Up!</a>
         </div>
